--- a/www/index.html
+++ b/www/index.html
@@ -18,9 +18,6 @@
 </head>
  <body>	
 
-
-
-
 <img class='bici-jpg' src='img/guy-allen.jpg'>
 <img class='bici-gif' src='img/guy-allen.gif'>
 
@@ -28,6 +25,31 @@
 <p></p>
 </div>
 
+<!--INTRO-->
+<section class='seccion-intro'>
+<button class='intro-entrar' type="button">ENTRAR INTRO</button>
+<button class='intro-crear' type="button">CREAR INTRO</button>
+<button class='intro-recordar' type="button">RECORDAR INTRO</button>
+</section> <!--end INTRO-->
+
+<!--USUARIO-->
+<section class='seccion-usuario'>
+<ul>
+<li class='nombre clase-crear clase-entrar'><input type='text'  placeholder='Nombre usuario'/></li>
+<li class='email clase-crear clase-recordar'><input type='email'  placeholder='Email'/></li>
+<li class='password clase-crear clase-entrar'><input type='password' placeholder='Contraseña'/></li>
+<li class='password-repetir clase-crear'><input type='password' placeholder='Repite contraseña'/></li>
+</ul>
+<button class='usuario-entrar clase-entrar' type="button">ENTRAR</button>
+<button class='usuario-crear clase-crear' type="button">CREAR</button>
+<button class='usuario-recordar clase-recordar' type="button">RECORDAR</button>
+<button class='usuario-atras clase-crear clase-entrar clase-recordar' type="button">ATRÁS</button>
+</section> <!--end USUARIO-->
+
+<!--RUTA -->
+<section class='seccion-ruta'>
+
+<button class='usuario-salir' type="button">SALIR</button>
 
 <p class='start-stop'></p>
 
@@ -53,7 +75,7 @@
 <button class='botones-modal noOK' type="button">No</button>
 </div>
 
-
+</section> <!--end RUTA -->
 
 
 <!-- include the jquery lib -->
